Allocation by Class view added